# thermal-structure

./: .gitattributes  .gitignore  LICENSE.txt  Makefile  README.md  modulefile.cc.cedar  scratch
config/: Dockerfile  build_py4elmer.sh  dev-environment.txt  env.yml  link2scratch  modulefile.cc.cedar  readme.md  requirements.sbi  requirements.txt  thermal.yml
expr/: readme.md
expr/00_CoupledInit/: Makefile  StrainHeating_Comparison.py  SurfaceFields.py  check_profiles.py  copy2scratch.sh  copy_chris.sh  debug.ipynb  grid_data.py  initialize.py  initialize.sh  local_downsample.py  make_experiment.py  make_jobscript.py  make_meshes.py  readme.md  (+5 more)
include/: readme.md
initialization/: make_meshes.py
input_data/: readme.md
lib/: read_result.py  result.py
misc/: notes.md
notebooks/: AirTemperature.ipynb  AreaMap.ipynb  ClimateForcing.ipynb  Climate_Coupling.ipynb  Diffusivity.ipynb  MassBalance.ipynb  distributions.ipynb  input_geometries.ipynb  nc_debug.ipynb  readme.md
processing/: read_result.py  result.py
results/: test.nc
scripts/: make_mesh.sh
src/: Percolation.f90  SurfaceBoundary.f90  Thermodynamics.f90  mass_balance.f90  mesh.grd
src/thermal/: add_attr.py  constants.py  derived_fields.py  elements.py  grid_data.py  mesh.py  open.py  plotting.py  pyproject.toml  readme.md  setup.py  test.py  utils.py
src/thermal/test/: gradient_test.py  readme.md
src/thermal/thermal/: animate.py  derived_fields.py  elements.py  gradient.py  meshing.py  open.py  plotting.py  utils.py
src/thermal/thermal/scripts/: downsample.py  grid_data.py  make_mesh.py
(+602 files in other folders)
